// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="Header-root-1"
>
  <header
    className="MuiPaper-root-17 MuiPaper-elevation4-23 MuiAppBar-root-9 MuiAppBar-positionFixed-10 MuiAppBar-colorPrimary-15 mui-fixed Header-appBar-2 Header-appBarShift-4 Header-appBarWithCookieInfo-3"
  >
    <div
      className="MuiToolbar-root-44 MuiToolbar-gutters-45"
    >
      <button
        aria-label="open drawer"
        className="MuiButtonBase-root-52 MuiIconButton-root-46 MuiIconButton-colorInherit-47 Header-menuButton-5 Header-hide-6"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-51"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-54"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-60"
        />
      </button>
      <h2
        className="MuiTypography-root-67 MuiTypography-title-73 MuiTypography-colorInherit-86 Header-flex-7 Header-title-8"
        onClick={[Function]}
      >
        Header
      </h2>
    </div>
  </header>
</div>
`;

exports[`renders correctly with closed 1`] = `
<div
  className="Header-root-1"
>
  <header
    className="MuiPaper-root-17 MuiPaper-elevation4-23 MuiAppBar-root-9 MuiAppBar-positionStatic-13 MuiAppBar-colorPrimary-15 Header-appBar-2"
  >
    <div
      className="MuiToolbar-root-44 MuiToolbar-gutters-45"
    >
      <button
        aria-label="open drawer"
        className="MuiButtonBase-root-52 MuiIconButton-root-46 MuiIconButton-colorInherit-47 Header-menuButton-5"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-51"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-54"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-60"
        />
      </button>
      <h2
        className="MuiTypography-root-67 MuiTypography-title-73 MuiTypography-colorInherit-86 Header-flex-7 Header-title-8"
        onClick={[Function]}
      >
        Header
      </h2>
    </div>
  </header>
</div>
`;
